--- a/src/HAI820I_Complements_RO/assets/tikz/td1_ex16_f1.tex
+++ b/src/HAI820I_Complements_RO/assets/tikz/td1_ex16_f1.tex
@@ -5,16 +5,15 @@
     \fbox{
         \begin{tikzpicture}
             \begin{axis}[
-                % axis lines=middle,
                 xlabel={\(x_1\)},
                 ylabel={\(x_2\)},
                 xmin=0, xmax=4,
                 ymin=0, ymax=4,
                 grid=both,
-                axis equal image, % <-- orthonormal grid
+                axis equal image,
                 width=10cm,
                 height=7cm,
-                legend pos=outer north east, % <-- legend outside
+                legend pos=outer north east,
                 legend cell align=left,
                 legend image post style={fill opacity=0.45},
                 legend style={fill=pagebg, draw=pagetext}
@@ -81,14 +80,8 @@
                 color=purple
             ] coordinates {(0,3)};
             \addlegendentry{Solution entière}
-            
-            % % ----- Level line for the objective function -----
-            % % z is a vector, the level line is orthogonal to the vector of coefficients of the objective function
-            % % 2x1 + x2 -> z = 2x1 + x2
-            % 3x1 + 4x2 -> z = 3x1 + 4x2
-            % % we can express x2 in terms of z and x1: x2 = z - 2x1
-            % x2 = (z - 3x1)/4
-            
+
+            % ----- Level line for the objective function -----
             \addplot[dashed, thick, yellow, domain=0:4] {51/16 - (3/4)*x};
             \addlegendentry{Ligne de niveau \(z=\frac{51}{4}\)}
             \end{axis}
