--- a/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_37.tex
+++ b/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_37.tex
@@ -1,6 +1,10 @@
 % ----- Consignes exo 37 ----- %
-\begin{td-exo}[title]\,\\ % 37 
-	
+\begin{td-exo}[Solutions semi-intégrales pour le problème de \textsc{vertex cover}]\,\\ % 37 
+	Par définition, une solution réalisable \(x\) et appelée semi-intégrale si les valeurs appartiennent à l'ensemble \(\{0, \frac12, 1\}\).
+
+	\begin{enumerate}
+		\item Donner la formulation du problème de \textsc{vertex cover} par un programme linéaire en nombres entiers
+	\end{enumerate}
 \end{td-exo}
 
 % ----- Solutions exo 37 ----- %
