--- a/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_08.tex
+++ b/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_08.tex
@@ -6,6 +6,8 @@
 % ----- Solutions exo 8 ----- %
 \iftoggle{showsolutions}{ 
 	\begin{td-sol}[]\ % 8
-		
+		On propose de visualiser le schéma de construction avec la figure~\ref{fig:td1_ex08_1} suivante:
+
+		\input{../assets/tikz/td1_ex08_1.tex}
 	\end{td-sol}
 }{}
