--- a/src/common/common_header.tex
+++ b/src/common/common_header.tex
@@ -110,6 +110,7 @@
 % ==============================================================================
 
 \usepackage{hyperref}             % Hyperlinks for cross-references and URLs
+\usepackage[all]{hypcap}          % Fix hyperlink targets for figures and tables
 
 % ==============================================================================
 % MISCELLANEOUS SETTINGS
