rajout consignes exo 31 -- AA

--- a/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_31.tex
+++ b/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_31.tex
@@ -1,6 +1,8 @@
 % ----- Consignes exo 31 ----- %
-\begin{td-exo}[title]\,\\ % 31 
-	
+\begin{td-exo}[Mesure différentielle: borne inférieure pour le problème du \textsc{Bin Packing}]\,\\ % 31 
+	Montrer que \textsc{Bin Packing} ne peut être résolu par un algorithme polynomial à rapport différentiel minoré par \(\frac{n-1}{n}\).
+
+	Pour cela, on pourra supposer l'existence d'un tel algorithme et arriver à une contradiction.
 \end{td-exo}
 
 % ----- Solutions exo 31 ----- %
