rajout consignes exo 30 -- AA

--- a/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_30.tex
+++ b/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_30.tex
@@ -1,6 +1,16 @@
 % ----- Consignes exo 30 ----- %
-\begin{td-exo}[title]\,\\ % 30 
-	
+\begin{td-exo}[Propriétés liées à la mesure au pire cas]\, % 30 
+	\begin{enumerate}
+		\item Soit \(\Pi\) un problème de maximisation appartenant à la classe \(\mathcal{NPO}\) ayant un ratio \(\delta\) pour la mesure.
+		Montrer que cela implique que le ratio dans le pire cas est de \(\delta\).
+
+		\item Sur le problème du \textsc{TSP}, considérons une instance \(I = (K_n, \overset{\rightarrow}d)\) avec \(\overset{\rightarrow}d\) le vecteur des arêtes-distances.
+		Alors, pour n'importe quelle transformation affine
+		\begin{equation*}
+			\overset{\rightarrow}d \coloneqq \gamma \cdot \overset{\rightarrow}d + \mu \cdot \overset{\rightarrow}1
+		\end{equation*}
+		avec \(\gamma,\mu \in \bb Q\) produit une approximation différentielle équivalente à celle obtenue pour \(I\).
+	\end{enumerate}
 \end{td-exo}
 
 % ----- Solutions exo 30 ----- %
